# backend

./: Cargo.toml
migrations/2022-12-03-172210_create_products/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
