[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres", "uuid", "r2d2"] }
dotenvy = "0.15.6"
r2d2 = "0.8.10"
serde = { version = "1.0.148", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

